test/scc/stmt/semantic-errors/053.t
void test()
{
    switch(10)
    {
        default:
        default:
            break;
    }
}